themes/dr-erez_-old/style.css
/* ... */
@media (max-width:768px) {
	body, button, input, select, textarea {
		font-size: 18px;
	}
	.login_phonenumber .phone_header svg {
		display: block;
		width:20px;
	}
	
	.login_phonenumber .phone_header span,
	.login_phonenumber .text-label {
		display: none;
	}
	
	.login_phonenumber a {
		text-decoration: none;
	}
	
	.login_phonenumber .login-text i {
		display: block;
		font-size: 20px;
	}
	
	.login_phonenumber {
        display: flex;
        flex-direction: row-reverse;
        gap: 5px;
		align-items: center;
		flex-grow: 1;
        margin: 0 !important;
    }
	
	.site-header a.remember-shahar img {
		width: 40px;
	}

	.site-header a.remember-shahar {
		font-size: 11px;
		width: 93px;
		min-width: 93px;
	}	
	
	.inside-article {
		padding: 0 15px !important;
	}
	
    .wrapper_personal_area .course_box a {
        display: grid;
		grid-template-columns: 100px calc(100% - 100px);
		gap: 0;
    }
	
	.wrapper_personal_area .course_box .img_container {
		max-width: 76px;
		min-height: 76px;
		align-self: center;
	}	
	
	.wrapper_personal_area .course_box a h2 {
		font-size: 18px;
		margin: 10px 0 10px 10px;
	}

    .main-navigation ul {
        display: none;
    }
    
    li.product.type-product {
        width: 100% !important;
    }

    ul.products.columns-4 {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    li.product {
        min-height: unset;
    }

    h2.woocommerce-loop-product__title {
        min-height: unset;
    }

    p.stock-inner {
        padding: 5px !important;
        margin-top: 2px !important;
    }

    .naf_btn {
        display: flex !important;
        grid-gap: 10px !important;
        flex-direction: column !important;

    }
    
    .inside-header .site-logo {
        margin: 0 0 5px !important;
        width: 180px;
		max-width: calc(100% - 185px);
    } 
	
	.member_mark {
		margin-left: auto;
	}
	
	.inside-header {
		flex-wrap: wrap;
		gap: 0 10px;
	}
	
	body.single-product .course-top-section	{
		padding: 0 20px 20px;
	}
	
	body.page-template-default .page {
		padding: 0 15px;
	}
	
	body.page-template-default .inside-article {
		padding: 30px 20px !important;
		margin: 40px auto!important;
	}	
	
	body.single-product .course-title, body.page-template-default .entry-title,
	.woocommerce div.product .product_title,
	body.single-lecturer_post_type .lecturer-name {	
		font-size: 28px;
		margin-bottom: 25px;
	}
	
	body.single-product .teacher_box {
		padding: 20px 10px 10px;
	}	
	
	body.single-product .course-content-section {
		padding: 20px;
	}
	
	body.single-product.woocommerce .btn_cancel_info {
		flex-direction: column;
	}	
	
	body.single-product .entry-content {
		margin: 40px 0!important;
	}	
	
	body.single-product.woocommerce div.product > div.images {
		width: auto!important;
		margin: 30px 15px!important;
	}
	
	.woocommerce div.product div.summary {
		width: 100%!important;
		padding: 0 15px 30px;
	}
	
	.woocommerce .cart .coupon {
		flex-direction: column;
		margin: 0;
	}

	.woocommerce .cart .coupon .button {
		width: 100%!important;
	}

	.woocommerce .cart .coupon .button,
	.woocommerce .cart .button, 
	.woocommerce .cart-collaterals .cross-sells ul.products li .cross-sell-price .button, 
	.woocommerce .cart-collaterals .club li .cross-sell-price .button,
	.woocommerce a.button,
	.woocommerce button.button
	{
		font-size: 18px;
		padding: 10px 12px;
	}


	.woocommerce .cart-collaterals .cross-sells ul.products li .cross-sell-price, .woocommerce .cart-collaterals .club li .cross-sell-price {
		min-width: 115px;
		text-align: center;
	}
	
	.woocommerce-billing-fields__field-wrapper, .woocommerce-shipping-fields__field-wrapper {
		grid-template-columns: 100%!important;
	}
	#billing_address_1_field, #shipping_address_1_field, #shipping_address_2_field {
		grid-column: 1;
	}
	
	.woocommerce form #customer_details .form-row {
		margin-bottom: 15px;
	}
	
	#customer_details input.more_data {
		width: 100%;
		margin: 0 0 15px 0;
	}	
	
	.woocommerce form.checkout_coupon {
		flex-direction: column;
		gap: 10px;
	}
	
	.woocommerce .cart_totals table.shop_table tbody tr.shipping td {
		text-align: right!important;
	}

	.woocommerce .cart_totals table.shop_table tbody tr.shipping td:before,
	.woocommerce .woocommerce-checkout-review-order-table tr.shipping td:before {
		float: none;
		margin-bottom: 10px;
		display: block;
	}	
	
	.woocommerce-checkout-review-order-table {
		border: 0;
	}

	.woocommerce-checkout-review-order-table thead {
		display: none;
	}

	.woocommerce-checkout-review-order-table tr {
		display: block;
		margin-bottom: 2px;
		padding: 5px;
	}

	.woocommerce-checkout-review-order-table td {
		display: block;
		text-align: right;
	}
	
	.woocommerce-checkout .woocommerce .woocommerce-checkout-review-order-table tr:not(.shipping) {
		display: flex;
		justify-content: space-between;
		gap: 20px;
	}
	.woocommerce-checkout .woocommerce .woocommerce-checkout-review-order-table td, .woocommerce-checkout .woocommerce .woocommerce-checkout-review-order-table th {
		padding: 2px;
	}
	
	.title-wrapper {
		flex-direction: column;
	}

	.teacher_course {
		flex-direction: column;
		text-align: center;
	}

	body.single-lesson_post_type .inside-article {
		padding: 30px 15px!important;
		margin: 40px 0!important;
	}

	body.single-lesson_post_type h1 {
		font-size: 28px;
	}

	body.single-lesson_post_type #main {
		padding: 0 15px;
	}

	.title-wrapper h2 {
		font-size: 22px;
		text-align: center;
	}	
}

@media only screen and (max-width: 500px) {
    .woocommerce-breadcrumb {
        font-size: 14px !important;
    }

    .cross-sell-header {
        font-size: 16px;
    }

    .cross-sell-image {
        display: none;
    }

    .inside-header {
        padding: 10px;
    }

    .checkout-button {
        font-size: 14px !important;
        clear: both;
        width: 100% !important;

    }

    .coupon input {
        width: 100% !important;
        margin: 10px 0px !important;
    }

}

